--- a/src/locales/ca/audit.json
+++ b/src/locales/ca/audit.json
@@ -8,7 +8,7 @@
   "hero.title": "Audit technique & Conformité NIS2",
   "hero.subtitle": "Pentesting approfondi + Gap-Analysis NIS2 : le chemin rapide et sûr vers la conformité totale.",
   "hero.cta": "Réservez votre consultation gratuite →",
-  "hero.secondaryCta": "Télécharger la Checklist « 15 contrôles NIS2 essentiels »",
+  "hero.secondaryCta": "Télécharger la Checklist",
 
   "why.heading": "Pourquoi nous choisir ?",
   "why.cards.0.title": "Pentesting offensif",
