--- a/src/locales/ca/common.json
+++ b/src/locales/ca/common.json
@@ -6,7 +6,7 @@
   "nav.logoAlt": "Logotip de TutumSec",
   "nav.menu.services": "Serveis",
   "nav.menu.products": "Productes",
-  "nav.menu.industries": "Indústries",
+  "nav.menu.industries": "Sectors",
   "nav.menu.resources": "Recursos",
   "nav.menu.about": "Sobre Nosaltres",
   "nav.menu.contact": "Contacte",
