--- a/src/locales/ca/home.json
+++ b/src/locales/ca/home.json
@@ -78,35 +78,35 @@
   "faq.a4": "No sempre; prioritzem quick-wins.",
   "faq.q5": "Com puc complir NIS2 abans de la data límit?",
   "faq.a5": "Roadmap TutumSec Compliance 360.",
-  "testimonials.ariaLabel": "Sección de testimonios",
-  "testimonials.heading": "Asegurando lo mejor de lo mejor",
-  "testimonials.subheading": "En TutumSec, los clientes son lo primero. Los líderes eligen a nuestros equipos como su socio de ciberseguridad de confianza.",
+  "testimonials.ariaLabel": "Secció de testimonis",
+  "testimonials.heading": "Casos d’èxit",
+  "testimonials.subheading": "A TutumSec, els clients són la nostra prioritat. Els líders trien els nostres equips com el seu soci de ciberseguretat de confiança.",
   "testimonials.prev": "Anterior",
-  "testimonials.next": "Siguiente",
-  "testimonials.goto": "Ir al slide",
-  "testimonials.imageAlt": "Testimonio",
+  "testimonials.next": "Següent",
+  "testimonials.goto": "Anar a la diapositiva",
+  "testimonials.imageAlt": "Testimoni",
   "testimonials.slides.0.image": "/uploads/testimonials/case1.jpg",
-  "testimonials.slides.0.title": "Grupo industrial, fabricación y mecánica",
-  "testimonials.slides.0.subtitle": "Cumplimiento regulatorio pleno y vigilancia continua",
-  "testimonials.slides.0.body": "Dolor inicial: cumplimiento regulatorio parcial, «puntos ciegos» en la nube y sin vigilancia continua.\nAcción TutumSec: auditoría técnica + normativa, alineación completa con NIS2, servicio vCISO y MDR/SOC 24×7.\nResultado: cumplimiento pleno, reducción del riesgo técnico y detección de incidentes < 30 min; informes ejecutivos mensuales que mejoran la toma de decisiones.",
+  "testimonials.slides.0.title": "Grup industrial, fabricació i mecànica",
+  "testimonials.slides.0.subtitle": "Compliment normatiu complet i vigilància contínua",
+  "testimonials.slides.0.body": "Dolor inicial: compliment normatiu parcial, punts cecs al núvol i sense vigilància contínua.\nAcció TutumSec: auditoria tècnica + normativa, alineació completa amb NIS2, servei vCISO i MDR/SOC 24×7.\nResultat: compliment total, reducció del risc tècnic i detecció d’incidents en menys de 30 minuts; informes executius mensuals que milloren la presa de decisions.",
   "testimonials.slides.1.image": "/uploads/testimonials/case2.jpg",
-  "testimonials.slides.1.title": "Grupo multisectorial (retail, sanidad privada y consumo)",
-  "testimonials.slides.1.subtitle": "Resiliencia alta y control unificado",
-  "testimonials.slides.1.body": "Dolor inicial: TI muy dispersa, comunicaciones sin segmentar, entornos cloud inseguros y backups incoherentes.\nAcción TutumSec: auditoría multicapa, hardening de nube y comunicaciones, nueva política de backups y acceso remoto seguro.\nResultado: infraestructura consolidada, alta resiliencia y control unificado de todas las unidades de negocio.",
+  "testimonials.slides.1.title": "Grup multisectorial (retail, sanitat privada i consum)",
+  "testimonials.slides.1.subtitle": "Alta resiliència i control unificat",
+  "testimonials.slides.1.body": "Dolor inicial: TI molt dispers, comunicacions sense segmentar, entorns cloud insegurs i còpies de seguretat incoherents.\nAcció TutumSec: auditoria multicapa, reforç del núvol i de les comunicacions, nova política de còpies i accés remot segur.\nResultat: infraestructura consolidada, alta resiliència i control unificat de totes les unitats de negoci.",
   "testimonials.slides.2.image": "/uploads/testimonials/case3.jpg",
-  "testimonials.slides.2.title": "Laboratorio farmacéutico y cosmético regulado",
-  "testimonials.slides.2.subtitle": "Hoja de ruta NIS2 y compromiso directivo",
-  "testimonials.slides.2.body": "Dolor inicial: cumplimiento parcial NIS2, desconexión entre TI y seguridad, visibilidad limitada de riesgos.\nAcción TutumSec: auditoría normativa, roadmap por fases y acompañamiento en la implantación de controles.\nResultado: avance sostenido hacia el cumplimiento, refuerzo técnico y compromiso activo de la dirección.",
+  "testimonials.slides.2.title": "Laboratori farmacèutic i cosmètic regulat",
+  "testimonials.slides.2.subtitle": "Full de ruta NIS2 i compromís directiu",
+  "testimonials.slides.2.body": "Dolor inicial: compliment parcial de NIS2, desconnexió entre TI i seguretat, visibilitat limitada dels riscos.\nAcció TutumSec: auditoria normativa, full de ruta per fases i acompanyament en la implementació de controls.\nResultat: avanç sostingut cap al compliment, reforç tècnic i compromís actiu de la direcció.",
   "testimonials.slides.3.image": "/uploads/testimonials/case4.jpg",
-  "testimonials.slides.3.title": "Fábrica tecnológica (energía y logística de componentes)",
-  "testimonials.slides.3.subtitle": "Segmentación y cifrado integral",
-  "testimonials.slides.3.body": "Dolor inicial: red poco protegida, hardware obsoleto y sin cifrado.\nAcción TutumSec: diagnóstico global, segmentación interna, upgrade de servidores críticos y cifrado integral.\nResultado: entorno seguro y modernizado, mayor capacidad de defensa ante amenazas internas y externas.",
+  "testimonials.slides.3.title": "Fàbrica tecnològica (energia i logística de components)",
+  "testimonials.slides.3.subtitle": "Segmentació i xifrat integral",
+  "testimonials.slides.3.body": "Dolor inicial: xarxa poc protegida, maquinari obsolet i sense xifrat.\nAcció TutumSec: diagnòstic global, segmentació interna, actualització de servidors crítics i xifrat complet.\nResultat: entorn segur i modernitzat, major capacitat de defensa davant d’amenaces internes i externes.",
   "testimonials.slides.4.image": "/uploads/testimonials/case5.jpg",
-  "testimonials.slides.4.title": "Estaciones de esquí con sistemas OT en remoto",
-  "testimonials.slides.4.subtitle": "Disponibilidad y monitorización OT",
-  "testimonials.slides.4.body": "Dolor inicial: OT expuesto, comunicaciones vulnerables y backups dispersos.\nAcción TutumSec: reingeniería de red, migración a cloud, estrategia de backups resilientes y monitorización OT.\nResultado: aumento de la disponibilidad, restauración rápida y ciberseguridad robusta en entornos geográficamente dispersos.",
+  "testimonials.slides.4.title": "Estacions d’esquí amb sistemes OT remots",
+  "testimonials.slides.4.subtitle": "Disponibilitat i monitoratge OT",
+  "testimonials.slides.4.body": "Dolor inicial: OT exposat, comunicacions vulnerables i còpies disperses.\nAcció TutumSec: reenginyeria de xarxa, migració al núvol, estratègia de còpies resilients i monitoratge OT.\nResultat: augment de la disponibilitat, restauració ràpida i ciberseguretat robusta en entorns geogràficament dispersos.",
   "testimonials.slides.5.image": "/uploads/testimonials/ingenieria.jpg",
-  "testimonials.slides.5.title": "Ingeniería industrial y automatización",
-  "testimonials.slides.5.subtitle": "Modernización y control de usuarios",
-  "testimonials.slides.5.body": "Dolor inicial: TI desactualizado, red sin segmentar, protección perimetral débil y control limitado de usuarios.\nAcción TutumSec: auditoría técnica, firewalls de última generación, EDR en endpoints, refuerzo de Office 365 y segmentación avanzada de red.\nResultado: infraestructura modernizada, mayor control de dispositivos/usuarios y resiliencia operativa reforzada."
+  "testimonials.slides.5.title": "Enginyeria industrial i automatització",
+  "testimonials.slides.5.subtitle": "Modernització i control d’usuaris",
+  "testimonials.slides.5.body": "Dolor inicial: TI desactualitzat, xarxa sense segmentar, protecció perimetral feble i control limitat d’usuaris.\nAcció TutumSec: auditoria tècnica, firewalls d’última generació, EDR en endpoints, reforç d’Office 365 i segmentació avançada de xarxa.\nResultat: infraestructura modernitzada, major control de dispositius/usuaris i resiliència operativa reforçada."
 }
