--- a/src/locales/ca/respuesta.json
+++ b/src/locales/ca/respuesta.json
@@ -23,7 +23,7 @@
   "steps.2.desc": "Anàlisi tècnica i cronologia de l’incident (forense segons definició/priorització del cas).\nRecomanacions prioritzades pel risc i suport en avisos regulatoris si s’escau.",
 
   "cta.proposal.label": "Sol·licitar proposta personalitzada",
-  "cta.proposal.href": "/contacte",
+  "cta.proposal.href": "/ca/contacte",
 
   "cogestion.title": "Cogestió real i govern actiu",
   "cogestion.0": "Canal directe i regles clares des de l’inici.",
