--- a/src/locales/en/audit.json
+++ b/src/locales/en/audit.json
@@ -8,7 +8,7 @@
   "hero.title": "Technical Audit & NIS2 Compliance",
   "hero.subtitle": "Deep pentesting + NIS2 gap analysis: the fastest and safest path to full compliance.",
   "hero.cta": "Book your free consultation →",
-  "hero.secondaryCta": "Download the “15 Essential NIS2 Controls” Checklist",
+  "hero.secondaryCta": "Download the Checklist",
 
   "why.heading": "Why choose us?",
   "why.cards.0.title": "Offensive pentesting",
