--- a/src/locales/en/common.json
+++ b/src/locales/en/common.json
@@ -6,7 +6,7 @@
   "nav.logoAlt": "TutumSec Logo",
   "nav.menu.services": "Services",
   "nav.menu.products": "Products",
-  "nav.menu.industries": "Industries",
+  "nav.menu.industries": "Sectors",
   "nav.menu.resources": "Resources",
   "nav.menu.about": "About Us",
   "nav.menu.contact": "Contact",
