--- a/src/locales/en/home.json
+++ b/src/locales/en/home.json
@@ -78,39 +78,35 @@
   "faq.a4": "Not always; we prioritize quick wins.",
   "faq.q5": "How do I meet NIS2 before the deadline?",
   "faq.a5": "TutumSec Compliance 360 roadmap.",
-  "testimonials.ariaLabel": "Sección de testimonios",
-  "testimonials.heading": "Asegurando lo mejor de lo mejor",
-  "testimonials.subheading": "En TutumSec, los clientes son lo primero. Los líderes eligen a nuestros equipos como su socio de ciberseguridad de confianza.",
-  "testimonials.prev": "Anterior",
-  "testimonials.next": "Siguiente",
-  "testimonials.goto": "Ir al slide",
-  "testimonials.imageAlt": "Testimonio",
-
+  "testimonials.ariaLabel": "Testimonials section",
+  "testimonials.heading": "Success stories",
+  "testimonials.subheading": "At TutumSec, clients come first. Leaders choose our teams as their trusted cybersecurity partner.",
+  "testimonials.prev": "Previous",
+  "testimonials.next": "Next",
+  "testimonials.goto": "Go to slide",
+  "testimonials.imageAlt": "Testimonial",
   "testimonials.slides.0.image": "/uploads/testimonials/case1.jpg",
-  "testimonials.slides.0.title": "Grupo industrial, fabricación y mecánica",
-  "testimonials.slides.0.subtitle": "Cumplimiento regulatorio pleno y vigilancia continua",
-  "testimonials.slides.0.body": "Dolor inicial: cumplimiento regulatorio parcial, «puntos ciegos» en la nube y sin vigilancia continua.\nAcción TutumSec: auditoría técnica + normativa, alineación completa con NIS2, servicio vCISO y MDR/SOC 24×7.\nResultado: cumplimiento pleno, reducción del riesgo técnico y detección de incidentes < 30 min; informes ejecutivos mensuales que mejoran la toma de decisiones.",
-
+  "testimonials.slides.0.title": "Industrial group, manufacturing and mechanics",
+  "testimonials.slides.0.subtitle": "Full regulatory compliance and continuous monitoring",
+  "testimonials.slides.0.body": "Initial pain: partial regulatory compliance, cloud ‘blind spots’ and lack of continuous monitoring.\nTutumSec action: technical + regulatory audit, full alignment with NIS2, vCISO service and MDR/SOC 24×7.\nResult: full compliance, reduced technical risk and incident detection in under 30 minutes; monthly executive reports that enhance decision-making.",
   "testimonials.slides.1.image": "/uploads/testimonials/case2.jpg",
-  "testimonials.slides.1.title": "Grupo multisectorial (retail, sanidad privada y consumo)",
-  "testimonials.slides.1.subtitle": "Resiliencia alta y control unificado",
-  "testimonials.slides.1.body": "Dolor inicial: TI muy dispersa, comunicaciones sin segmentar, entornos cloud inseguros y backups incoherentes.\nAcción TutumSec: auditoría multicapa, hardening de nube y comunicaciones, nueva política de backups y acceso remoto seguro.\nResultado: infraestructura consolidada, alta resiliencia y control unificado de todas las unidades de negocio.",
-
+  "testimonials.slides.1.title": "Multisector group (retail, private healthcare and consumer goods)",
+  "testimonials.slides.1.subtitle": "High resilience and unified control",
+  "testimonials.slides.1.body": "Initial pain: highly fragmented IT, unsegmented communications, insecure cloud environments and inconsistent backups.\nTutumSec action: multilayer audit, cloud and communications hardening, new backup policy and secure remote access.\nResult: consolidated infrastructure, high resilience and unified control across all business units.",
   "testimonials.slides.2.image": "/uploads/testimonials/case3.jpg",
-  "testimonials.slides.2.title": "Laboratorio farmacéutico y cosmético regulado",
-  "testimonials.slides.2.subtitle": "Hoja de ruta NIS2 y compromiso directivo",
-  "testimonials.slides.2.body": "Dolor inicial: cumplimiento parcial NIS2, desconexión entre TI y seguridad, visibilidad limitada de riesgos.\nAcción TutumSec: auditoría normativa, roadmap por fases y acompañamiento en la implantación de controles.\nResultado: avance sostenido hacia el cumplimiento, refuerzo técnico y compromiso activo de la dirección.",
-
+  "testimonials.slides.2.title": "Regulated pharmaceutical and cosmetic laboratory",
+  "testimonials.slides.2.subtitle": "NIS2 roadmap and executive engagement",
+  "testimonials.slides.2.body": "Initial pain: partial NIS2 compliance, disconnection between IT and security, limited risk visibility.\nTutumSec action: regulatory audit, phased roadmap and support in implementing controls.\nResult: steady progress toward compliance, technical reinforcement and active commitment from management.",
   "testimonials.slides.3.image": "/uploads/testimonials/case4.jpg",
-  "testimonials.slides.3.title": "Fábrica tecnológica (energía y logística de componentes)",
-  "testimonials.slides.3.subtitle": "Segmentación y cifrado integral",
-  "testimonials.slides.3.body": "Dolor inicial: red poco protegida, hardware obsoleto y sin cifrado.\nAcción TutumSec: diagnóstico global, segmentación interna, upgrade de servidores críticos y cifrado integral.\nResultado: entorno seguro y modernizado, mayor capacidad de defensa ante amenazas internas y externas.",
+  "testimonials.slides.3.title": "Technology factory (energy and component logistics)",
+  "testimonials.slides.3.subtitle": "Segmentation and end-to-end encryption",
+  "testimonials.slides.3.body": "Initial pain: poorly protected network, outdated hardware and no encryption.\nTutumSec action: global assessment, internal segmentation, critical server upgrades and full encryption.\nResult: secure and modernized environment with greater defense capability against internal and external threats.",
   "testimonials.slides.4.image": "/uploads/testimonials/case5.jpg",
-  "testimonials.slides.4.title": "Estaciones de esquí con sistemas OT en remoto",
-  "testimonials.slides.4.subtitle": "Disponibilidad y monitorización OT",
-  "testimonials.slides.4.body": "Dolor inicial: OT expuesto, comunicaciones vulnerables y backups dispersos.\nAcción TutumSec: reingeniería de red, migración a cloud, estrategia de backups resilientes y monitorización OT.\nResultado: aumento de la disponibilidad, restauración rápida y ciberseguridad robusta en entornos geográficamente dispersos.",
+  "testimonials.slides.4.title": "Ski resorts with remote OT systems",
+  "testimonials.slides.4.subtitle": "Availability and OT monitoring",
+  "testimonials.slides.4.body": "Initial pain: exposed OT, vulnerable communications and scattered backups.\nTutumSec action: network reengineering, cloud migration, resilient backup strategy and OT monitoring.\nResult: increased availability, fast recovery and robust cybersecurity across geographically dispersed environments.",
   "testimonials.slides.5.image": "/uploads/testimonials/ingenieria.jpg",
-  "testimonials.slides.5.title": "Ingeniería industrial y automatización",
-  "testimonials.slides.5.subtitle": "Modernización y control de usuarios",
-  "testimonials.slides.5.body": "Dolor inicial: TI desactualizado, red sin segmentar, protección perimetral débil y control limitado de usuarios.\nAcción TutumSec: auditoría técnica, firewalls de última generación, EDR en endpoints, refuerzo de Office 365 y segmentación avanzada de red.\nResultado: infraestructura modernizada, mayor control de dispositivos/usuarios y resiliencia operativa reforzada."
+  "testimonials.slides.5.title": "Industrial engineering and automation",
+  "testimonials.slides.5.subtitle": "Modernization and user control",
+  "testimonials.slides.5.body": "Initial pain: outdated IT, unsegmented network, weak perimeter protection and limited user control.\nTutumSec action: technical audit, next-generation firewalls, endpoint EDR, Office 365 reinforcement and advanced network segmentation.\nResult: modernized infrastructure, improved device/user control and strengthened operational resilience."
 }
