--- a/src/locales/en/oficina.json
+++ b/src/locales/en/oficina.json
@@ -78,5 +78,5 @@
 
   "cta.title": "Shall we start?",
   "cta.primary": "Book your free consultation →",
-  "cta.secondary": "Request an OSI Charter sample (PDF)"
+  "cta.secondary": "Download OSI Charter sample (PDF)"
 }
