--- a/src/locales/en/respuesta.json
+++ b/src/locales/en/respuesta.json
@@ -23,7 +23,7 @@
   "steps.2.desc": "Technical analysis and incident timeline (forensics pending case scoping/priorities).\nRisk-prioritized recommendations and support with regulatory notices when applicable.",
 
   "cta.proposal.label": "Request a tailored proposal",
-  "cta.proposal.href": "/contact",
+  "cta.proposal.href": "/en/contact",
 
   "cogestion.title": "Real co-management and active governance",
   "cogestion.0": "Direct channel and clear rules from the start.",
