--- a/src/locales/es/audit.json
+++ b/src/locales/es/audit.json
@@ -8,7 +8,7 @@
   "hero.title": "Auditoría técnica & Compliance NIS2",
   "hero.subtitle": "Pentesting profundo + Gap-Analysis NIS 2: el camino rápido y seguro hacia el cumplimiento total.",
   "hero.cta": "Reserva tu consultoría gratuita →",
-  "hero.secondaryCta": "Descarga la Checklist “15 Controles Esenciales NIS 2”",
+  "hero.secondaryCta": "Descarga la Checklist ",
 
   "why.heading": "¿Por qué somos diferentes?",
   "why.cards.0.title": "Pentesting ofensivo",
