--- a/src/locales/es/home.json
+++ b/src/locales/es/home.json
@@ -79,28 +79,24 @@
   "faq.q5": "¿Cómo cumplo NIS2 antes de la fecha límite?",
   "faq.a5": "Roadmap TutumSec Compliance 360.",
   "testimonials.ariaLabel": "Sección de testimonios",
-  "testimonials.heading": "Asegurando lo mejor de lo mejor",
+  "testimonials.heading": "Casos de éxito",
   "testimonials.subheading": "En TutumSec, los clientes son lo primero. Los líderes eligen a nuestros equipos como su socio de ciberseguridad de confianza.",
   "testimonials.prev": "Anterior",
   "testimonials.next": "Siguiente",
   "testimonials.goto": "Ir al slide",
   "testimonials.imageAlt": "Testimonio",
-
   "testimonials.slides.0.image": "/uploads/testimonials/case1.jpg",
   "testimonials.slides.0.title": "Grupo industrial, fabricación y mecánica",
   "testimonials.slides.0.subtitle": "Cumplimiento regulatorio pleno y vigilancia continua",
   "testimonials.slides.0.body": "Dolor inicial: cumplimiento regulatorio parcial, «puntos ciegos» en la nube y sin vigilancia continua.\nAcción TutumSec: auditoría técnica + normativa, alineación completa con NIS2, servicio vCISO y MDR/SOC 24×7.\nResultado: cumplimiento pleno, reducción del riesgo técnico y detección de incidentes < 30 min; informes ejecutivos mensuales que mejoran la toma de decisiones.",
-
   "testimonials.slides.1.image": "/uploads/testimonials/case2.jpg",
   "testimonials.slides.1.title": "Grupo multisectorial (retail, sanidad privada y consumo)",
   "testimonials.slides.1.subtitle": "Resiliencia alta y control unificado",
   "testimonials.slides.1.body": "Dolor inicial: TI muy dispersa, comunicaciones sin segmentar, entornos cloud inseguros y backups incoherentes.\nAcción TutumSec: auditoría multicapa, hardening de nube y comunicaciones, nueva política de backups y acceso remoto seguro.\nResultado: infraestructura consolidada, alta resiliencia y control unificado de todas las unidades de negocio.",
-
   "testimonials.slides.2.image": "/uploads/testimonials/case3.jpg",
   "testimonials.slides.2.title": "Laboratorio farmacéutico y cosmético regulado",
   "testimonials.slides.2.subtitle": "Hoja de ruta NIS2 y compromiso directivo",
   "testimonials.slides.2.body": "Dolor inicial: cumplimiento parcial NIS2, desconexión entre TI y seguridad, visibilidad limitada de riesgos.\nAcción TutumSec: auditoría normativa, roadmap por fases y acompañamiento en la implantación de controles.\nResultado: avance sostenido hacia el cumplimiento, refuerzo técnico y compromiso activo de la dirección.",
-
   "testimonials.slides.3.image": "/uploads/testimonials/case4.jpg",
   "testimonials.slides.3.title": "Fábrica tecnológica (energía y logística de componentes)",
   "testimonials.slides.3.subtitle": "Segmentación y cifrado integral",
