--- a/src/locales/es/oficina.json
+++ b/src/locales/es/oficina.json
@@ -78,5 +78,5 @@
 
   "cta.title": "¿Empezamos?",
   "cta.primary": "Reserva tu consultoría gratuita →",
-  "cta.secondary": "Solicita ejemplo de «Charter OSI» (PDF)"
+  "cta.secondary": "Descarga «Charter OSI» (PDF)"
 }
