--- a/src/locales/es/respuesta.json
+++ b/src/locales/es/respuesta.json
@@ -23,7 +23,7 @@
   "steps.2.desc": "Análisis técnico y cronología del incidente (forense bajo estudio/priorización del caso).\nRecomendaciones priorizadas por riesgo y soporte en avisos regulatorios si correspondiera.",
 
   "cta.proposal.label": "Solicitar propuesta personalizada",
-  "cta.proposal.href": "/contacto",
+  "cta.proposal.href": "/es/contacto",
 
   "cogestion.title": "Co-gestión real y gobierno activo",
   "cogestion.0": "Canal directo y reglas claras desde el inicio.",
