--- a/src/locales/fr/audit.json
+++ b/src/locales/fr/audit.json
@@ -5,7 +5,7 @@
   "hero.title": "Audit technique & Conformité NIS2",
   "hero.subtitle": "Pentesting en profondeur + analyse d’écarts NIS2 : la voie rapide et sûre vers une conformité totale.",
   "hero.cta": "Réservez votre consultation gratuite →",
-  "hero.secondaryCta": "Télécharger la Checklist « 15 contrôles essentiels NIS2 »",
+  "hero.secondaryCta": "Télécharger la Checklist",
 
   "diff.heading": "Pourquoi nous sommes différents",
   "diff.card1.title": "Pentesting offensif",
