--- a/src/locales/fr/home.json
+++ b/src/locales/fr/home.json
@@ -78,39 +78,35 @@
   "faq.a4": "Pas toujours ; nous privilégions les quick-wins.",
   "faq.q5": "Comment respecter NIS2 avant l’échéance ?",
   "faq.a5": "Feuille de route TutumSec Compliance 360.",
-  "testimonials.ariaLabel": "Sección de testimonios",
-  "testimonials.heading": "Asegurando lo mejor de lo mejor",
-  "testimonials.subheading": "En TutumSec, los clientes son lo primero. Los líderes eligen a nuestros equipos como su socio de ciberseguridad de confianza.",
-  "testimonials.prev": "Anterior",
-  "testimonials.next": "Siguiente",
-  "testimonials.goto": "Ir al slide",
-  "testimonials.imageAlt": "Testimonio",
-
+  "testimonials.ariaLabel": "Section des témoignages",
+  "testimonials.heading": "Cas de réussite",
+  "testimonials.subheading": "Chez TutumSec, les clients passent avant tout. Les dirigeants choisissent nos équipes comme partenaire de cybersécurité de confiance.",
+  "testimonials.prev": "Précédent",
+  "testimonials.next": "Suivant",
+  "testimonials.goto": "Aller à la diapositive",
+  "testimonials.imageAlt": "Témoignage",
   "testimonials.slides.0.image": "/uploads/testimonials/case1.jpg",
-  "testimonials.slides.0.title": "Grupo industrial, fabricación y mecánica",
-  "testimonials.slides.0.subtitle": "Cumplimiento regulatorio pleno y vigilancia continua",
-  "testimonials.slides.0.body": "Dolor inicial: cumplimiento regulatorio parcial, «puntos ciegos» en la nube y sin vigilancia continua.\nAcción TutumSec: auditoría técnica + normativa, alineación completa con NIS2, servicio vCISO y MDR/SOC 24×7.\nResultado: cumplimiento pleno, reducción del riesgo técnico y detección de incidentes < 30 min; informes ejecutivos mensuales que mejoran la toma de decisiones.",
-
+  "testimonials.slides.0.title": "Groupe industriel, fabrication et mécanique",
+  "testimonials.slides.0.subtitle": "Conformité réglementaire complète et surveillance continue",
+  "testimonials.slides.0.body": "Douleur initiale : conformité réglementaire partielle, « zones aveugles » dans le cloud et absence de surveillance continue.\nAction TutumSec : audit technique + réglementaire, alignement complet avec la directive NIS2, service vCISO et MDR/SOC 24×7.\nRésultat : conformité totale, réduction du risque technique et détection des incidents en moins de 30 minutes ; rapports exécutifs mensuels améliorant la prise de décision.",
   "testimonials.slides.1.image": "/uploads/testimonials/case2.jpg",
-  "testimonials.slides.1.title": "Grupo multisectorial (retail, sanidad privada y consumo)",
-  "testimonials.slides.1.subtitle": "Resiliencia alta y control unificado",
-  "testimonials.slides.1.body": "Dolor inicial: TI muy dispersa, comunicaciones sin segmentar, entornos cloud inseguros y backups incoherentes.\nAcción TutumSec: auditoría multicapa, hardening de nube y comunicaciones, nueva política de backups y acceso remoto seguro.\nResultado: infraestructura consolidada, alta resiliencia y control unificado de todas las unidades de negocio.",
-
+  "testimonials.slides.1.title": "Groupe multisectoriel (commerce de détail, santé privée et consommation)",
+  "testimonials.slides.1.subtitle": "Haute résilience et contrôle unifié",
+  "testimonials.slides.1.body": "Douleur initiale : SI très dispersé, communications non segmentées, environnements cloud non sécurisés et sauvegardes incohérentes.\nAction TutumSec : audit multicouche, durcissement du cloud et des communications, nouvelle politique de sauvegarde et accès distant sécurisé.\nRésultat : infrastructure consolidée, haute résilience et contrôle unifié de toutes les unités d’affaires.",
   "testimonials.slides.2.image": "/uploads/testimonials/case3.jpg",
-  "testimonials.slides.2.title": "Laboratorio farmacéutico y cosmético regulado",
-  "testimonials.slides.2.subtitle": "Hoja de ruta NIS2 y compromiso directivo",
-  "testimonials.slides.2.body": "Dolor inicial: cumplimiento parcial NIS2, desconexión entre TI y seguridad, visibilidad limitada de riesgos.\nAcción TutumSec: auditoría normativa, roadmap por fases y acompañamiento en la implantación de controles.\nResultado: avance sostenido hacia el cumplimiento, refuerzo técnico y compromiso activo de la dirección.",
-
+  "testimonials.slides.2.title": "Laboratoire pharmaceutique et cosmétique réglementé",
+  "testimonials.slides.2.subtitle": "Feuille de route NIS2 et engagement de la direction",
+  "testimonials.slides.2.body": "Douleur initiale : conformité partielle à NIS2, déconnexion entre IT et sécurité, visibilité limitée des risques.\nAction TutumSec : audit réglementaire, feuille de route par étapes et accompagnement dans la mise en œuvre des contrôles.\nRésultat : progression continue vers la conformité, renforcement technique et engagement actif de la direction.",
   "testimonials.slides.3.image": "/uploads/testimonials/case4.jpg",
-  "testimonials.slides.3.title": "Fábrica tecnológica (energía y logística de componentes)",
-  "testimonials.slides.3.subtitle": "Segmentación y cifrado integral",
-  "testimonials.slides.3.body": "Dolor inicial: red poco protegida, hardware obsoleto y sin cifrado.\nAcción TutumSec: diagnóstico global, segmentación interna, upgrade de servidores críticos y cifrado integral.\nResultado: entorno seguro y modernizado, mayor capacidad de defensa ante amenazas internas y externas.",
+  "testimonials.slides.3.title": "Usine technologique (énergie et logistique de composants)",
+  "testimonials.slides.3.subtitle": "Segmentation et chiffrement complets",
+  "testimonials.slides.3.body": "Douleur initiale : réseau peu protégé, matériel obsolète et absence de chiffrement.\nAction TutumSec : diagnostic global, segmentation interne, mise à niveau des serveurs critiques et chiffrement complet.\nRésultat : environnement sécurisé et modernisé, meilleure capacité de défense contre les menaces internes et externes.",
   "testimonials.slides.4.image": "/uploads/testimonials/case5.jpg",
-  "testimonials.slides.4.title": "Estaciones de esquí con sistemas OT en remoto",
-  "testimonials.slides.4.subtitle": "Disponibilidad y monitorización OT",
-  "testimonials.slides.4.body": "Dolor inicial: OT expuesto, comunicaciones vulnerables y backups dispersos.\nAcción TutumSec: reingeniería de red, migración a cloud, estrategia de backups resilientes y monitorización OT.\nResultado: aumento de la disponibilidad, restauración rápida y ciberseguridad robusta en entornos geográficamente dispersos.",
+  "testimonials.slides.4.title": "Stations de ski avec systèmes OT à distance",
+  "testimonials.slides.4.subtitle": "Disponibilité et supervision OT",
+  "testimonials.slides.4.body": "Douleur initiale : OT exposé, communications vulnérables et sauvegardes dispersées.\nAction TutumSec : réingénierie réseau, migration vers le cloud, stratégie de sauvegardes résilientes et supervision OT.\nRésultat : augmentation de la disponibilité, restauration rapide et cybersécurité robuste dans des environnements géographiquement dispersés.",
   "testimonials.slides.5.image": "/uploads/testimonials/ingenieria.jpg",
-  "testimonials.slides.5.title": "Ingeniería industrial y automatización",
-  "testimonials.slides.5.subtitle": "Modernización y control de usuarios",
-  "testimonials.slides.5.body": "Dolor inicial: TI desactualizado, red sin segmentar, protección perimetral débil y control limitado de usuarios.\nAcción TutumSec: auditoría técnica, firewalls de última generación, EDR en endpoints, refuerzo de Office 365 y segmentación avanzada de red.\nResultado: infraestructura modernizada, mayor control de dispositivos/usuarios y resiliencia operativa reforzada."
+  "testimonials.slides.5.title": "Ingénierie industrielle et automatisation",
+  "testimonials.slides.5.subtitle": "Modernisation et contrôle des utilisateurs",
+  "testimonials.slides.5.body": "Douleur initiale : SI obsolète, réseau non segmenté, protection périmétrique faible et contrôle limité des utilisateurs.\nAction TutumSec : audit technique, pare-feux de nouvelle génération, EDR sur les postes, renforcement d’Office 365 et segmentation réseau avancée.\nRésultat : infrastructure modernisée, meilleur contrôle des appareils/utilisateurs et résilience opérationnelle renforcée."
 }
