--- a/src/locales/fr/oficina.json
+++ b/src/locales/fr/oficina.json
@@ -78,5 +78,5 @@
 
   "cta.title": "On commence ?",
   "cta.primary": "Réservez votre consultation gratuite →",
-  "cta.secondary": "Demandez un exemple de « Charte OSI » (PDF)"
+  "cta.secondary": "Décharge « Charte OSI » (PDF)"
 }
