--- a/src/locales/fr/recuperacion.json
+++ b/src/locales/fr/recuperacion.json
@@ -23,6 +23,7 @@
   "audience.cards.3.items": "plan pratique et durable sans tout remplacer.",
   "audience.cards.4.category": "Secteur public",
   "audience.cards.4.items": "continuité de service et preuves prêtes pour l’audit.",
+  "audience.cards.4.href": "/fr/industrias/finanzas",
 
   "whyNow.title": "Pourquoi maintenant ?",
   "whyNow.text": "Les attaques ne se contentent plus de chiffrer : elles visent l’arrêt de l’activité. La différence se fait à la récupération : sauvegardes inviolables, tests réels et plan simple pour revenir à la normale au plus vite.",
