--- a/src/locales/ca/oficina.json
+++ b/src/locales/ca/oficina.json
@@ -78,5 +78,5 @@
 
   "cta.title": "Comencem?",
   "cta.primary": "Reserva la teva consultoria gratuïta →",
-  "cta.secondary": "Sol·licita un exemple de «Carta OSI» (PDF)"
+  "cta.secondary": "Descàrrega «Carta OSI» (PDF)"
 }
