--- a/src/locales/es/common.json
+++ b/src/locales/es/common.json
@@ -6,7 +6,7 @@
   "nav.logoAlt": "TutumSec Logo",
   "nav.menu.services": "Servicios",
   "nav.menu.products": "Productos",
-  "nav.menu.industries": "Industrias",
+  "nav.menu.industries": "Sectores",
   "nav.menu.resources": "Recursos",
   "nav.menu.about": "Sobre Nosotros",
   "nav.menu.contact": "Contacto",
