--- a/src/locales/ca/audit.json
+++ b/src/locales/ca/audit.json
@@ -1,6 +1,8 @@
 {
   "seo.title": "Audit & Conformité NIS2 pour entreprises | TutumSec",
   "seo.description": "Gap-analysis NIS2 + audit technique et plan de mise en conformité. Évidences pour audits et chaîne d’approvisionnement.",
+  "meta.title": "Audit & Conformité NIS2 pour entreprises | TutumSec",
+  "meta.description": "Gap-analysis NIS2 + audit technique et plan de mise en conformité. Évidences pour audits et chaîne d’approvisionnement.",
 
   "schema.name": "Audit & Conformité NIS2",
   "schema.description": "Pentesting approfondi + analyse d’écarts NIS2 : la voie la plus rapide et la plus sûre vers la conformité totale.",
