--- a/src/locales/en/audit.json
+++ b/src/locales/en/audit.json
@@ -1,7 +1,8 @@
 {
   "seo.title": "NIS2 Audit & Compliance for companies | TutumSec",
   "seo.description": "NIS2 gap analysis + technical audit and remediation plan. Evidence for audits and supply chain requirements.",
-
+  "meta.title": "NIS2 Audit & Compliance for companies | TutumSec",
+  "meta.description": "NIS2 gap analysis + technical audit and remediation plan. Evidence for audits and supply chain requirements.",
   "schema.name": "NIS2 Audit & Compliance",
   "schema.description": "Deep pentesting + NIS2 gap analysis: the fastest, safest path to full compliance.",
 
