--- a/src/locales/es/audit.json
+++ b/src/locales/es/audit.json
@@ -1,6 +1,8 @@
 {
   "seo.title": "Auditoría & Compliance NIS2 para empresas | TutumSec",
   "seo.description": "Gap-analysis NIS2 + auditoría técnica y plan de adecuación. Evidencias para auditorías y cadena de suministro.",
+  "meta.title": "Auditoría & Compliance NIS2 para empresas | TutumSec",
+  "meta.description": "Gap-analysis NIS2 + auditoría técnica y plan de adecuación. Evidencias para auditorías y cadena de suministro.",
 
   "schema.name": "Auditoría & Compliance NIS2",
   "schema.description": "Pentesting profundo + Gap-Analysis NIS 2: el camino rápido y seguro hacia el cumplimiento total.",
