--- a/src/locales/es/ciso.json
+++ b/src/locales/es/ciso.json
@@ -2,6 +2,8 @@
   "hero.title": "Consultoría CISO estratégica que impulsa tu ciberseguridad",
   "hero.subtitle": "Convertimos el riesgo en ventaja competitiva con un servicio vCISO que reduce la exposición y garantiza el cumplimiento para PYMEs con alta exigencia digital en Barcelona, Girona, Andorra y el resto de España.",
   "hero.cta": "Reserva tu consultoría gratuita →",
+  "meta.title": "Consultoría CISO | vCISO Barcelona & Andorra – TutumSec",
+  "meta.description": "Servicio CISO externo premium para PYMEs de Cataluña, Andorra y España. Cumple NIS 2/ISO 27001 en < 90 días y reduce incidentes críticos un 30 %. Sesión gratis 15 min.",
 
   "benefits.step1": "Logra el cumplimiento NIS2 e ISO 27001 en menos de 90 días",
   "benefits.step2": "Reduce un 30 % los incidentes críticos en 6 meses",
